<resources>
    <string name="app_name">Cheaper</string>
    <string name="edit_message">Hello </string>
    <string name="fname">N</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home_offers">Latest Offers</string>
    <string name="home_markets">Nearest Super Markets</string>
    <string name="home_search">Search</string>
    <string name="home_town">Your Town</string>
    <string name="home_feedback">Feedback</string>
    <string name="home_exit">Exit</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
</resources>
