<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_offers"
            android:title="@string/home_offers" />
        <item
            android:id="@+id/nav_market"
            android:icon="@drawable/ic_market"
            android:title="@string/home_markets" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/home_search" />
        <item
            android:id="@+id/nav_town"
            android:icon="@drawable/ic_town"
            android:title="@string/home_town" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/home_feedback" />
            <item
                android:id="@+id/nav_exit"

                android:title="@string/home_exit" />
        </menu>
    </item>

</menu>
